# bybyepp-test

./: .gitignore  README.md  external_script.py  logging.ini  main.py  pyproject.toml  services_start.sh
app/: router.py
app/api/: api.py
app/api/authentication/: authentication.py
app/api/ligands/: images.py
app/api/projects/: projects.py
app/api/registration/: registration.py
app/api/search/: search.py
app/api/structures/: structures.py
app/api/users/: users.py
app/core/: celery_app.py  config.py  response.py  security.py
app/helpers/: Singleton.py
app/models/: Ligand.py  Structure.py  __init__.py
app/services/: RedisService.py  tasks.py
app/test/: fixtures.py
app/workers/: Job.py  tasks.py
